--- a/style.css
+++ b/style.css
@@ -9,6 +9,35 @@ html {
   -o-background-size: cover;
   background-size: cover;
 }
+.zone {
+    /*padding:30px 50px;*/
+    /*cursor:pointer;*/
+    color:#FFF;
+    font-size:2em;
+    border-radius:4px;
+    border:4px solid #bbb;
+    transition: all 0.3s linear;
+}
+.main-nav {
+    display: flex;
+    list-style: none;
+    margin: 50;
+    font-size: 0.7em;
+}
+@media only screen and (max-width: 600px) {
+    .main-nav {
+        font-size: 0.5em;
+        padding: 0;
+    }
+}
+
+.push {
+    margin-left: auto;
+}
+a{
+  padding: 30px;
+  color: white;
+}
 
 h1 {
   font-size: 3rem;
@@ -22,7 +51,7 @@ hr {
 }
 
 .buffer {
-  height: 10rem;
+  height: 17rem;
 }
 
 .btn {
